@@ -1,6 +1,6 @@
 Package: arm
-Version: 1.4-04
-Date: 2011-2-23
+Version: 1.4-05
+Date: 2011-2-26
 Title: Data Analysis Using Regression and Multilevel/Hierarchical Models
 Author: Andrew Gelman <gelman@stat.columbia.edu>,
         Yu-Sung Su <suyusung@tsinghua.edu.cn>,
